added domain classes added context added configuration files added generic interface for repository

--- a/PcBuilder.Server/PcBuilder.Server/appsettings.json
+++ b/PcBuilder.Server/PcBuilder.Server/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=PcBuilder;Trusted_Connection=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
