modified string array into list added repositories added interfaces for repositories added case controller

--- a/PcBuilder.Server/Business/Business.csproj
+++ b/PcBuilder.Server/Business/Business.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Data.Core\Data.Core.csproj" />
+    <ProjectReference Include="..\Data.Persistence\Data.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
